Add tournament controller, service and repo
